--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body{
@@ -18,7 +19,7 @@ main{
 }
 
 .pixel{
-  width: 16px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
   background: white;
 }
